--- a/OrdenVolteo.html
+++ b/OrdenVolteo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orden de Trabajo - Tolva</title>
+    <title>Orden de Trabajo - Volteo</title>
     <link rel="stylesheet" href="https://ramcxn.github.io/Modificacion/Style.CSS">
     <style>
       /* Estilo para ocultar la imagen al imprimir si no tiene un id_fab */
@@ -18,7 +18,7 @@
     <div class="header">
         <img src="https://www.appsheet.com:443/fsimage.png?appid=15ab7ef8-4923-40f5-80ca-3607e9850805&datasource=google&filename=DocId%3D1ON0AOw6aLouPB4hLD4HSPHQrMyYHFX5x&signature=47171ea295d0c06dc250337a646296a67b31c22191c59f9869bf63a365b8ae49&tableprovider=google&userid=1254688" alt="Logo de la empresa" class="logo">
         <div class="title-container">
-            <h1 class="header-title">ORDEN DE TRABAJO - TOLVA</h1>
+            <h1 class="header-title">ORDEN DE TRABAJO - VOLTEO</h1>
             <h2 class="header-subtitle">Documento de Fabricación</h2>
         </div>
         <img id="qrCodeImage" src="" alt="Código QR" class="logo" style="display: none;">
@@ -59,6 +59,12 @@
                 <br>
                 <div class="field-label">COLOR SECUNDARIO:</div>
                 <div class="field-value"><span id="colorSecundario"></span></div>
+                <br>
+                <div class="field-label">FALDÓN:</div>
+                <div class="field-value"><span id="faldon"></span></div>
+                <br>
+                <div class="field-label">POLVERAS:</div>
+                <div class="field-value"><span id="polveras"></span></div>
                 <br>
                 <div class="field-label">SUSPENSIÓN:</div>
                 <div class="field-value"><span id="suspension"></span></div>
