--- a/OrdenTolvaJaula.html
+++ b/OrdenTolvaJaula.html
@@ -1,52 +1,48 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orden de Trabajo - Tolva Jaula</title>
-    <link rel="stylesheet" href="https://ramcxn.github.io/Modificacion/Style.CSS">
-    <style>
-      /* Estilo para ocultar la imagen al imprimir si no tiene un id_fab */
-      @media print {
-        #qrCodeImage[src=""] {
-            display: none;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Orden de Trabajo - Tolva Jaula</title>
+  <link rel="stylesheet" href="https://ramcxn.github.io/Modificacion/Style.CSS" />
+  <style>
+    @media print {
+      #qrCodeImage[src=""] {
+        display: none;
       }
-    </style>
+    }
+  </style>
 </head>
 <body>
-    <div class="header">
-        <img src="https://www.appsheet.com:443/fsimage.png?appid=15ab7ef8-4923-40f5-80ca-3607e9850805&datasource=google&filename=DocId%3D1ON0AOw6aLouPB4hLD4HSPHQrMyYHFX5x&signature=47171ea295d0c06dc250337a646296a67b31c22191c59f9869bf63a365b8ae49&tableprovider=google&userid=1254688" alt="Logo de la empresa" class="logo">
-        <div class="title-container">
-            <h1 class="header-title">ORDEN DE TRABAJO - TOLVA JAULA</h1>
-            <h2 class="header-subtitle">Documento de Fabricación</h2>
-        </div>
-        <img id="qrCodeImage" src="" alt="Código QR" class="logo" style="display: none;">
+  <div class="header">
+    <img src="https://www.appsheet.com:443/fsimage.png?appid=15ab7ef8-4923-40f5-80ca-3607e9850805&datasource=google&filename=DocId%3D1ON0AOw6aLouPB4hLD4HSPHQrMyYHFX5x&signature=47171ea295d0c06dc250337a646296a67b31c22191c59f9869bf63a365b8ae49&tableprovider=google&userid=1254688" alt="Logo de la empresa" class="logo">
+    <div class="title-container">
+      <h1 class="header-title">ORDEN DE TRABAJO - TOLVA JAULA</h1>
+      <h2 class="header-subtitle">Documento de Fabricación</h2>
     </div>
-    
-    <table class="header-table">
-        <tr>
-            <td><strong>Mes de Producción:</strong></td>
-            <td><span id="mesProduccion"></span></td>
-            <td><strong>Orden de trabajo:</strong></td>
-            <td><span id="ordenTrabajo"></span></td>
-            <td><strong>Tipo de Faldón:</strong></td>
-            <td><span id="tipoFaldon"></span></td>
-        </tr>
-        <tr>
-            <td><strong>Cliente:</strong></td>
-            <td colspan="3"><span id="cliente"></span></td>
-            <td><strong>NIV:</strong></td>
-            <td><span id="niv"></span></td>
-        </tr>
-        <tr>
-            <td><strong>Tipo de unidad:</strong></td>
-            <td colspan="3"><span id="tipoUnidad"></span></td>
-            <td><strong>Realizado por:</strong></td>
-            <td><span id="realizadoPor"></span></td>
-        </tr>
-    </table>
+    <img id="qrCodeImage" src="" alt="Código QR" class="logo" style="display: none;" />
+  </div>
 
+  <table class="header-table">
+    <tr>
+      <td><strong>Mes de Producción:</strong></td>
+      <td><span id="mesProduccion"></span></td>
+      <td><strong>Orden de trabajo:</strong></td>
+      <td><span id="ordenTrabajo"></span></td>
+    </tr>
+    <tr>
+      <td><strong>Cliente:</strong></td>
+      <td colspan="3"><span id="cliente"></span></td>
+      <td><strong>NIV:</strong></td>
+      <td><span id="niv"></span></td>
+    </tr>
+    <tr>
+      <td><strong>Tipo de unidad:</strong></td>
+      <td colspan="3"><span id="tipoUnidad"></span></td>
+      <td><strong>Realizado por:</strong></td>
+      <td><span id="realizadoPor"></span></td>
+    </tr>
+  </table>
     <table class="main-content plataforma-section">
         <tr>
             <td class="section-header" colspan="2"><strong>Plataforma</strong></td>
