--- a/OrdenTolvaJaula.html
+++ b/OrdenTolvaJaula.html
@@ -265,10 +265,15 @@
                 qrCodeImage.style.display = 'none'; 
             }
             
-            const getAppSheetImageUrl = (fileName) => {
-                if (!fileName) return '';
-                return `https://www.appsheet.com/template/gettablefileurl?appName=${appName}&tableName=${tableName}&fileName=${encodeURIComponent(fileName)}`;
-            };
+const getAppSheetImageUrl = (fileName) => {
+  if (!fileName) return '';
+  // Si contiene una ruta (como ORDENES_Images/archivo.jpg), usarla directamente
+  if (fileName.includes("/") || fileName.includes("%2F")) {
+    return `https://www.appsheet.com/${decodeURIComponent(fileName)}`;
+  }
+  // Si no, usar ruta estándar
+  return `https://www.appsheet.com/template/gettablefileurl?appName=${appName}&tableName=${tableName}&fileName=${encodeURIComponent(fileName)}`;
+};
 
             // Llenar información general
             document.getElementById('mesProduccion').innerText = getParam('mes_de_produccion');
