--- a/OrdenTolva.html
+++ b/OrdenTolva.html
@@ -46,154 +46,33 @@
         </tr>
     </table>
 
-    <table class="main-content plataforma-section">
-        <tr>
-            <td class="section-header" colspan="2"><strong>Plataforma</strong></td>
-        </tr>
-        <tr>
-            <td>
-                <div class="field-label">MEDIDAS:</div>
-                <div class="field-value"><span id="medidas"></span></div>
-                <div class="field-label">COLOR PRIMARIO:</div>
-                <div class="field-value"><span id="colorPrimario"></span></div>
-                <br>
-                <div class="field-label">COLOR SECUNDARIO:</div>
-                <div class="field-value"><span id="colorSecundario"></span></div>
-                <br>
-                <div class="field-label">FALDÓN:</div>
-                <div class="field-value"><span id="faldon"></span></div>
-                <br>
-                <div class="field-label">POLVERAS:</div>
-                <div class="field-value"><span id="polveras"></span></div>
-                <br>
-                <div class="field-label">SUSPENSIÓN:</div>
-                <div class="field-value"><span id="suspension"></span></div>
-                <br>
-                <div class="field-label">CANTIDAD DE SUSPENSIONES:</div>
-                <div class="field-value"><span id="cantSuspensiones"></span></div>
-                <br>
-                <div class="field-label">RETRÁCTIL EJE:</div>
-                <div class="field-value"><span id="retractilEje"></span></div>
-                <br>
-                <div class="field-label">FRENOS:</div>
-                <div class="field-value"><span id="frenos"></span></div>
-                <br>
-                <div class="field-label">SISTEMA DE INFLADO PSI:</div>
-                <div class="field-value"><span id="sistemaInflado"></span></div>
-                <br>
-                <div class="field-label">GANCHO TIRÓN:</div>
-                <div class="field-value"><span id="ganchoTiron"></span></div>
-                <br>
-                <div class="field-label">PORTALLANTAS:</div>
-                <div class="field-value"><span id="portallantas"></span></div>
-                <br>
-                <div class="field-label">PERNO REY:</div>
-                <div class="field-value"><span id="pernoRey"></span></div>
-                <br>
-            </td>
-            <td>
-                <div class="field-label">JUEGO DE PATINES:</div>
-                <div class="field-value"><span id="juegoPatines"></span></div>
-                <br>
-                <div class="field-label">CANTIDAD DE PATINES:</div>
-                <div class="field-value"><span id="cantPatines"></span></div>
-                <br>
-                <div class="field-label">CAJA DE HERRAMIENTAS:</div>
-                <div class="field-value"><span id="cajaHerramientas"></span></div>
-                <br>
-                <div class="field-label">LODERAS DELANTERA:</div>
-                <div class="field-value"><span id="loderaDelantera"></span></div>
-                <br>
-                <div class="field-label">LODERAS TRASERA:</div>
-                <div class="field-value"><span id="loderaTrasera"></span></div>
-                <br>
-                <div class="field-label">MANIVELAS DE PATÍN:</div>
-                <div class="field-value"><span id="manivelasPatin"></span></div>
-                <br>
-                <div class="field-label">PLAFONES:</div>
-                <div class="field-value"><span id="plafones"></span></div>
-                <br>
-                <div class="field-label">EJES:</div>
-                <div class="field-value"><span id="ejes"></span></div>
-                <br>
-                <div class="field-label">CANTIDAD DE EJES:</div>
-                <div class="field-value"><span id="cantEjes"></span></div>
-                <br>
-                <div class="field-label">DISTANCIA ENTRE EJES:</div>
-                <div class="field-value"><span id="distanciaEjes"></span></div>
-                <br>
-                <div class="field-label">PERSONALIZACIÓN DE VIGA:</div>
-                <div class="field-value"><span id="personalizacionViga"></span></div>
-                <br>
-            </td>
-        </tr>
-    </table>
+<!-- Plataforma -->
+<table class="main-content">
+  <tr><th colspan="6" class="section-header">PLATAFORMA</th></tr>
+  <tr><td class="field-label">MEDIDAS</td><td colspan="2" id="dimensiones"></td><td class="field-label">COLOR PRIMARIO</td><td colspan="2" id="color"></td></tr>
+  <tr><td class="field-label">COLOR SECUNDARIO</td><td colspan="2" id="color_2"></td><td class="field-label">EJES</td><td colspan="2" id="ejes"></td></tr>
+  <tr><td class="field-label">CANTIDAD DE EJES</td><td colspan="2" id="cantidad_de_ejes"></td><td class="field-label">SUSPENSIÓN</td><td colspan="2" id="suspension"></td></tr>
+  <tr><td class="field-label">CANTIDAD DE SUSPENSIONES</td><td colspan="2" id="cantidad_de_suspensiones"></td><td class="field-label">TIPO CERRADA</td><td colspan="2" id="tipo_cerrada"></td></tr>
+  <tr><td class="field-label">TIPO DE ARCO</td><td colspan="2" id="tipo_de_arco"></td><td class="field-label">PUERTA DELANTERA</td><td colspan="2" id="puerta_delantera"></td></tr>
+  <tr><td class="field-label">PLAFONES POR LADO</td><td colspan="2" id="plafones_por_lado"></td><td class="field-label">DIRECCIONALES</td><td colspan="2" id="direccionales"></td></tr>
+  <tr><td class="field-label">MANIVELAS DE PATÍN</td><td colspan="2" id="manivelas_de_patin"></td><td class="field-label">RETRÁCTIL EJE</td><td colspan="2" id="retractil_eje"></td></tr>
+  <tr><td class="field-label">GANCHO TIRÓN</td><td colspan="2" id="gancho_tiron"></td><td class="field-label">PORTALLANTAS</td><td colspan="2" id="portallantas"></td></tr>
+  <tr><td class="field-label">JUEGO DE PATINES</td><td colspan="2" id="juego_de_patines"></td><td class="field-label">CANTIDAD DE PATINES</td><td colspan="2" id="cantidad_de_patines"></td></tr>
+  <tr><td class="field-label">CONOS</td><td colspan="2" id="conos"></td><td class="field-label">ESCALERA</td><td colspan="2" id="escalera"></td></tr>
+  <tr><td class="field-label">PUERTA TRASERA</td><td colspan="2" id="puerta_trasera"></td><td class="field-label">DISTANCIA ENTRE EJES</td><td colspan="2" id="distancia_de_ejes"></td></tr>
+  <tr><td class="field-label">PERSONALIZACIÓN DE VIGA</td><td colspan="5" id="personalizacion_de_viga"></td></tr>
+</table>
 
-    <table class="main-content estructura-section">
-        <tr>
-            <td class="section-header" colspan="2"><strong>Estructura Tolva</strong></td>
-        </tr>
-        <tr>
-            <td>
-                <div class="field-label">TIPO CERRADA:</div>
-                <div class="field-value"><span id="tipoCerrada"></span></div>
-                <br>
-                <div class="field-label">TIPO DE ARCO:</div>
-                <div class="field-value"><span id="tipoArco"></span></div>
-                <br>
-                <div class="field-label">PUERTA DELANTERA:</div>
-                <div class="field-value"><span id="puertaDelantera"></span></div>
-                <br>
-                <div class="field-label">CONOS:</div>
-                <div class="field-value"><span id="conos"></span></div>
-                <br>
-                <div class="field-label">ESCALERA:</div>
-                <div class="field-value"><span id="escalera"></span></div>
-                <br>
-                <div class="field-label">PUERTA TRASERA:</div>
-                <div class="field-value"><span id="puertaTrasera"></span></div>
-                <br>
-            </td>
-            <td>
-                <div class="field-label">DIRECCIONALES:</div>
-                <div class="field-value"><span id="direccionales"></span></div>
-                <br>
-            </td>
-        </tr>
-    </table>
-
-    <table class="main-content accesorios-section">
-        <tr>
-            <td class="section-header" colspan="2"><strong>Accesorios</strong></td>
-        </tr>
-        <tr>
-            <td>
-                <div class="field-label">RINES:</div>
-                <div class="field-value"><span id="rines"></span></div>
-                <br>
-                <div class="field-label">CANTIDAD DE RINES:</div>
-                <div class="field-value"><span id="cantRines"></span></div>
-                <br>
-                <div class="field-label">LLANTAS:</div>
-                <div class="field-value"><span id="llantas"></span></div>
-                <br>
-                <div class="field-label">CANTIDAD DE LLANTAS:</div>
-                <div class="field-value"><span id="cantLlantas"></span></div>
-                <br>
-            </td>
-            <td>
-                <div class="field-label">PLAFONES POR LADO:</div>
-                <div class="field-value"><span id="plafonesPorLado"></span></div>
-                <br>
-                <div class="field-label">LUZ PLACA:</div>
-                <div class="field-value"><span id="luzPlaca"></span></div>
-                <br>
-                <div class="field-label">SISTEMA DE LONA:</div>
-                <div class="field-value"><span id="sistemaLona"></span></div>
-                <br>
-            </td>
-        </tr>
-    </table>
+<!-- Accesorios -->
+<table class="main-content">
+  <tr><th colspan="6" class="section-header">ACCESORIOS</th></tr>
+  <tr><td class="field-label">FRENOS</td><td colspan="2" id="frenos"></td><td class="field-label">SISTEMA DE INFLADO PSI</td><td colspan="2" id="sistema_de_inflado_psi"></td></tr>
+  <tr><td class="field-label">RINES</td><td colspan="2" id="rines"></td><td class="field-label">CANTIDAD DE RINES</td><td colspan="2" id="cantidad_de_rines"></td></tr>
+  <tr><td class="field-label">LLANTAS</td><td colspan="2" id="llantas_70"></td><td class="field-label">CANTIDAD DE LLANTAS</td><td colspan="2" id="cantidad_de_llantas"></td></tr>
+  <tr><td class="field-label">SISTEMA DE LONA</td><td colspan="2" id="sistema_de_lona"></td><td class="field-label">PLAFONES TRASEROS</td><td colspan="2" id="plafones_atras"></td></tr>
+  <tr><td class="field-label">LODERAS DELANTERA</td><td colspan="2" id="loderas_delantera"></td><td class="field-label">LODERAS TRASERA</td><td colspan="2" id="loderas_trasera"></td></tr>
+  <tr><td class="field-label">LUZ PLACA</td><td colspan="5" id="luz_placa"></td></tr>
+</table>
 
     <div id="modifications-container"></div>
     
