--- a/OrdenTolva.html
+++ b/OrdenTolva.html
@@ -48,33 +48,123 @@
 
 <!-- Plataforma -->
 <table class="main-content">
-  <tr><th colspan="6" class="section-header">PLATAFORMA</th></tr>
-  <tr><td class="field-label">MEDIDAS</td><td colspan="2" id="dimensiones"></td><td class="field-label">COLOR PRIMARIO</td><td colspan="2" id="color"></td></tr>
-  <tr><td class="field-label">COLOR SECUNDARIO</td><td colspan="2" id="color_2"></td><td class="field-label">EJES</td><td colspan="2" id="ejes"></td></tr>
-  <tr><td class="field-label">CANTIDAD DE EJES</td><td colspan="2" id="cantidad_de_ejes"></td><td class="field-label">SUSPENSIÓN</td><td colspan="2" id="suspension"></td></tr>
-  <tr><td class="field-label">CANTIDAD DE SUSPENSIONES</td><td colspan="2" id="cantidad_de_suspensiones"></td><td class="field-label">TIPO CERRADA</td><td colspan="2" id="tipo_cerrada"></td></tr>
-  <tr><td class="field-label">TIPO DE ARCO</td><td colspan="2" id="tipo_de_arco"></td><td class="field-label">PUERTA DELANTERA</td><td colspan="2" id="puerta_delantera"></td></tr>
-  <tr><td class="field-label">PLAFONES POR LADO</td><td colspan="2" id="plafones_por_lado"></td><td class="field-label">DIRECCIONALES</td><td colspan="2" id="direccionales"></td></tr>
-  <tr><td class="field-label">MANIVELAS DE PATÍN</td><td colspan="2" id="manivelas_de_patin"></td><td class="field-label">RETRÁCTIL EJE</td><td colspan="2" id="retractil_eje"></td></tr>
-  <tr><td class="field-label">GANCHO TIRÓN</td><td colspan="2" id="gancho_tiron"></td><td class="field-label">PORTALLANTAS</td><td colspan="2" id="portallantas"></td></tr>
-  <tr><td class="field-label">JUEGO DE PATINES</td><td colspan="2" id="juego_de_patines"></td><td class="field-label">CANTIDAD DE PATINES</td><td colspan="2" id="cantidad_de_patines"></td></tr>
-  <tr><td class="field-label">CONOS</td><td colspan="2" id="conos"></td><td class="field-label">ESCALERA</td><td colspan="2" id="escalera"></td></tr>
-  <tr><td class="field-label">PUERTA TRASERA</td><td colspan="2" id="puerta_trasera"></td><td class="field-label">DISTANCIA ENTRE EJES</td><td colspan="2" id="distancia_de_ejes"></td></tr>
-  <tr><td class="field-label">PERSONALIZACIÓN DE VIGA</td><td colspan="5" id="personalizacion_de_viga"></td></tr>
+  <tr>
+    <th colspan="6" class="section-header">PLATAFORMA</th>
+  </tr>
+  <tr>
+    <td class="field-label">MEDIDAS</td>
+    <td colspan="2"><span id="dimensiones"></span></td>
+    <td class="field-label">COLOR PRIMARIO</td>
+    <td colspan="2"><span id="color"></span></td>
+  </tr>
+  <tr>
+    <td class="field-label">COLOR SECUNDARIO</td>
+    <td colspan="2"><span id="color_2"></span></td>
+    <td class="field-label">EJES</td>
+    <td colspan="2"><span id="ejes"></span></td>
+  </tr>
+  <tr>
+    <td class="field-label">CANTIDAD DE EJES</td>
+    <td colspan="2"><span id="cantidad_de_ejes"></span></td>
+    <td class="field-label">SUSPENSIÓN</td>
+    <td colspan="2"><span id="suspension"></span></td>
+  </tr>
+  <tr>
+    <td class="field-label">CANTIDAD DE SUSPENSIONES</td>
+    <td colspan="2"><span id="cantidad_de_suspensiones"></span></td>
+    <td class="field-label">TIPO CERRADA</td>
+    <td colspan="2"><span id="tipo_cerrada"></span></td>
+  </tr>
+  <tr>
+    <td class="field-label">TIPO DE ARCO</td>
+    <td colspan="2"><span id="tipo_de_arco"></span></td>
+    <td class="field-label">PUERTA DELANTERA</td>
+    <td colspan="2"><span id="puerta_delantera"></span></td>
+  </tr>
+  <tr>
+    <td class="field-label">PLAFONES POR LADO</td>
+    <td colspan="2"><span id="plafones_por_lado"></span></td>
+    <td class="field-label">DIRECCIONALES</td>
+    <td colspan="2"><span id="direccionales"></span></td>
+  </tr>
+  <tr>
+    <td class="field-label">MANIVELAS DE PATÍN</td>
+    <td colspan="2"><span id="manivelas_de_patin"></span></td>
+    <td class="field-label">RETRÁCTIL EJE</td>
+    <td colspan="2"><span id="retractil_eje"></span></td>
+  </tr>
+  <tr>
+    <td class="field-label">GANCHO TIRÓN</td>
+    <td colspan="2"><span id="gancho_tiron"></span></td>
+    <td class="field-label">PORTALLANTAS</td>
+    <td colspan="2"><span id="portallantas"></span></td>
+  </tr>
+  <tr>
+    <td class="field-label">JUEGO DE PATINES</td>
+    <td colspan="2"><span id="juego_de_patines"></span></td>
+    <td class="field-label">CANTIDAD DE PATINES</td>
+    <td colspan="2"><span id="cantidad_de_patines"></span></td>
+  </tr>
+  <tr>
+    <td class="field-label">CONOS</td>
+    <td colspan="2"><span id="conos"></span></td>
+    <td class="field-label">ESCALERA</td>
+    <td colspan="2"><span id="escalera"></span></td>
+  </tr>
+  <tr>
+    <td class="field-label">PUERTA TRASERA</td>
+    <td colspan="2"><span id="puerta_trasera"></span></td>
+    <td class="field-label">DISTANCIA ENTRE EJES</td>
+    <td colspan="2"><span id="distancia_de_ejes"></span></td>
+  </tr>
+  <tr>
+    <td class="field-label">PERSONALIZACIÓN DE VIGA</td>
+    <td colspan="5"><span id="personalizacion_de_viga"></span></td>
+  </tr>
 </table>
 
 <!-- Accesorios -->
 <table class="main-content">
-  <tr><th colspan="6" class="section-header">ACCESORIOS</th></tr>
-  <tr><td class="field-label">FRENOS</td><td colspan="2" id="frenos"></td><td class="field-label">SISTEMA DE INFLADO PSI</td><td colspan="2" id="sistema_de_inflado_psi"></td></tr>
-  <tr><td class="field-label">RINES</td><td colspan="2" id="rines"></td><td class="field-label">CANTIDAD DE RINES</td><td colspan="2" id="cantidad_de_rines"></td></tr>
-  <tr><td class="field-label">LLANTAS</td><td colspan="2" id="llantas_70"></td><td class="field-label">CANTIDAD DE LLANTAS</td><td colspan="2" id="cantidad_de_llantas"></td></tr>
-  <tr><td class="field-label">SISTEMA DE LONA</td><td colspan="2" id="sistema_de_lona"></td><td class="field-label">PLAFONES TRASEROS</td><td colspan="2" id="plafones_atras"></td></tr>
-  <tr><td class="field-label">LODERAS DELANTERA</td><td colspan="2" id="loderas_delantera"></td><td class="field-label">LODERAS TRASERA</td><td colspan="2" id="loderas_trasera"></td></tr>
-  <tr><td class="field-label">LUZ PLACA</td><td colspan="5" id="luz_placa"></td></tr>
-</table>
+  <tr>
+    <th colspan="6" class="section-header">ACCESORIOS</th>
+  </tr>
+  <tr>
+    <td class="field-label">FRENOS</td>
+    <td colspan="2"><span id="frenos"></span></td>
+    <td class="field-label">SISTEMA DE INFLADO PSI</td>
+    <td colspan="2"><span id="sistema_de_inflado_psi"></span></td>
+  </tr>
+  <tr>
+    <td class="field-label">RINES</td>
+    <td colspan="2"><span id="rines"></span></td>
+    <td class="field-label">CANTIDAD DE RINES</td>
+    <td colspan="2"><span id="cantidad_de_rines"></span></td>
+  </tr>
+  <tr>
+    <td class="field-label">LLANTAS</td>
+    <td colspan="2"><span id="llantas_70"></span></td>
+    <td class="field-label">CANTIDAD DE LLANTAS</td>
+    <td colspan="2"><span id="cantidad_de_llantas"></span></td>
+  </tr>
+  <tr>
+    <td class="field-label">SISTEMA DE LONA</td>
+    <td colspan="2"><span id="sistema_de_lona"></span></td>
+    <td class="field-label">PLAFONES TRASEROS</td>
+    <td colspan="2"><span id="plafones_atras"></span></td>
+  </tr>
+  <tr>
+    <td class="field-label">LODERAS DELANTERA</td>
+    <td colspan="2"><span id="loderas_delantera"></span></td>
+    <td class="field-label">LODERAS TRASERA</td>
+    <td colspan="2"><span id="loderas_trasera"></span></td>
+  </tr>
+  <tr>
+    <td class="field-label">LUZ PLACA</td>
+    <td colspan="5"><span id="luz_placa"></span></td>
+  </tr>
+</table> 
 
-    <div id="modifications-container"></div>
+   <div id="modifications-container"></div>
     
     <div id="observaciones-section" style="display: none;">
         <table class="observations-table">
